# events-api-aggregator

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml
app/: cache.py  config.py  database.py  dependencies.py  main.py  models.py  schemas.py
app/provider/: client.py  paginator.py
app/repositories/: events.py  protocols.py  sync_state.py  tickets.py
app/routes/: events.py  health.py  sync.py  tickets.py
app/usecases/: events.py  sync.py  tickets.py
docker/: init.sql
migrations/: env.py
migrations/versions/: 815eb212c8f2_create_events_aggregator_tables.py
tests/: conftest.py  test_events_routes.py  test_paginator.py  test_provider_client.py  test_sync.py  test_tickets_routes.py
