[project]
name = "events-provider-api-aggregator"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "httpx==0.28.1",
    "pydantic[email]==2.10.3",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "anyio>=4.0",
    "ruff==0.8.4",
]
